--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind CSS</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-400 pt-5 text-orange-800">
-    <div class="text-center md:text-right sm:text-left md:text-blue-600"   >Harsh</div>
-    <button class=" text-center px-8 py-2 drop-shadow-lg bg-white m-8 font-bold 
-    rounded-md hover:scale-[1.4] transition-all">Click Me</button>
-    <div>
-        <button class="bg-blue-500 text-white mt-4 ml-4 px-8 
-         py-3 rounded-md hover:bg-white hover:text-blue-800">Click me</button>
-    </div>
-</body>
-</html>  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>This is my first heading</h1>
+    <h2>This is my second heading</h2>
+
+<!-- <img src="" alt="" srcset=""> --> 
+
+    <p>This is my ParaGraph</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores aliquam
+      alias quidem. Architecto nemo soluta facilis delectus vitae voluptatibus
+      perferendis quidem officia veniam, aperiam sequi aliquid deleniti
+      blanditiis voluptates quos. this
+    </p>
+    
+    <img src="" alt="">
+    <img src="" alt="" sizes="" srcset="">
+
+  </body>
+</html>
