--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>This is my first heading</h1>
-    <h2>This is my second heading</h2>
-
-<!-- <img src="" alt="" srcset=""> --> 
-
-    <p>This is my ParaGraph</p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores aliquam
-      alias quidem. Architecto nemo soluta facilis delectus vitae voluptatibus
-      perferendis quidem officia veniam, aperiam sequi aliquid deleniti
-      blanditiis voluptates quos. this
-    </p>
-    
-    <img src="" alt="">
-    <img src="" alt="" sizes="" srcset="">
-
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> </title>
+</head>
+<body>
+    hello world
+</body>
 </html>
