--- a/iframe.html
+++ b/iframe.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iFrame</title>
+    <title>HTML IFrame</title>
 </head>
 <body>
-    <h1>Harsh  Bauddha</h1>
-    <p>I am a Engineering Student</p>
-    <iframe src="https://www.youtube.com/embed/AlM2BjdogME" frameborder="0" width="450" height="550">
 
-    </iframe>
+    <!--HTML Iframe Syntax-->
+
+    <!-- <iframe src="url" title="description"></iframe> -->
+
+    
+    <iframe src="https:google.com" frameborder="0"></iframe>
+
+    <!--Iframe - Set Height and Width-->
+    <iframe src="html_css.html" height="2000" width="2000" title="Iframe Example" frameborder="0"></iframe>
+<!--Iframe - Remove the Border-->
+    <iframe src="html_elements.html" style="border:10px solid blue;" title="Iframe Examp" frameborder="0"></iframe>
+   
+    <!--Iframe - Target for a Link-->
+
+    <iframe src="demo_iframe.htm" name="iframe_a" title="Iframe Example"></iframe>
+
+<p><a href="https://www.w3schools.com" target="iframe_a">W3Schools.com</a></p>
+
 </body>
 </html>
